tolk-tester/tests/invalid-semantics/err-4266.tolk
fun invalidReferencingGenericMethodWithoutGeneric() {
    var t = createEmptyTuple();
    var cb = t.tupleLast;
}

/**
@compilation_should_fail
@stderr can not use a generic function `tupleLast<T>` as non-call
 */
